# Radar-CPSI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  tests.yml
config/: keywords.yaml
data/: .gitkeep  radar_cpsi.db
src/radar_cpsi/: __init__.py  backfill.py  config.py  database.py  http_client.py  keywords.py  models.py  notifier.py  pipeline.py  run_daily.py
src/radar_cpsi/sources/: __init__.py  base.py  pncp.py  querido_diario.py
tests/: test_dedup.py  test_keywords.py
