[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-cpsi"
version = "0.1.0"
description = "Robô que monitora editais de CPSI (Lei Complementar 182/2021) de videomonitoramento urbano e notifica no Telegram."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.27,<1.0",
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
